# exercise_python_it

./: AutomaticPytestFileGeneratorProgram.py  README.md  automatic_pytest_file_generator_program.py  pyproject.toml  pytest.ini
.config/: pylintrc
.github/workflows/: CheckCodeStyleWithBlack.yml
github_exercise/: github_exercise.py
google_drive_share/: pytest関連_2021_0219_1722.pptx
sampleproject/: main.py  vscode_拡張.txt
sampleproject/MySampleProgram/PythonProgram/: SamplePythonProgram.txt  Wraps.py  ctrl_json_file.py  my_decorators.py
sampleproject/MySampleProgram/pylint/: pylint_calendar_10_4_1.py  pylint_poem_pub.py
sampleproject/book/BeginningPython3_O_REILLY/chapter10/: 10-1.py  10-2.py  10-3.py  10-4.py  10-5.py  10-6.py  10-7.py  10-8.py  10-9.py  calendar_10_4_1.py  dir_10_2_1.py  dir_10_2_2-3.py  dir_10_2_5.py  mp.py  os_10_1_10.py  os_10_1_2.py  os_10_1_3.py  os_10_1_4.py  os_10_1_5.py  os_10_1_6.py  os_10_1_9.py  process_10_3_2.py  process_10_3_3.py
sampleproject/www/Project_Euler/: problem001.py  problem004.py  problem008.py  problem009.py  problem012.py  problem013.py  problem014.py  problem015.py  problem016.py  problem018.py  problem019.py  problem020.py  problem021.py  problem025.py  problem026.py  problem029.py  problem031.py  problem032.py  problem033.py  problem034.py  problem035.py  problem038.py  problem040.py  problem041.py  problem044.py  problem045.py  problem046.py  problem047.py  problem051.py
sampleproject/www/pytest/: test_problem009.py
tests/: test_problem001.py  test_sampleproject.py
(+266 files in other folders)
